--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-appication.properties
-application.yml
+.properties
+application.properties
+.yml
 
 
 ### STS ###
